--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@metaplex-foundation/amman": "^0.10.0",
-    "@metaplex-foundation/solita": "^0.12.2",
+    "@safecoin/amman": "^0.10.0",
+    "@safecoin/solita": "^0.12.2",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "esbuild-runner": "^2.2.1",
